--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -435,7 +435,12 @@
     "# Plot the results from your previous query as a bar chart. \n",
     "# Use \"Trip Avg Temp\" as your Title\n",
     "# Use the average temperature for the y value\n",
-    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n"
+    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n",
+    "\n",
+    "\n",
+    "plt.title(\"Trip Avg Temp\")\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
